[tool.poetry]
name = "xhs-gpt"
version = "0.1.0"
description = ""
authors = ["markyfsun <sunyunfei201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langserve = "^0.0.24"
openai = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
